<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="50dp"
        android:orientation="vertical">



        <TextView
            android:id="@+id/tv_mobile"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:text="@string/mobile"/>

        <EditText
            android:id="@+id/et_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_mobile"
            android:maxLength="10"
            android:inputType="phone"
            android:textColorHint="@color/colorAccent"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_marginTop="30dp"
            android:text="@string/password"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLength="6"
            android:textColorHint="@color/colorAccent"
            android:layout_marginTop="20dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:weightSum="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:layout_height="50dp"
                android:text="@string/login_button"
                />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/register_button" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>